tests/agl/rejections/type/for_non_iterable.agl
for x in 42 do
  ()
done
